# pyveil

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  llms.txt  pyproject.toml  pyveil.yaml  setup.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml  tests.yml
compatibility/: README.md  fixtures.json  manifest.json  receipt.json  receipt.md
docs/: README.md  cookbook.md  detector-provenance.md  evaluation.html  faq.md  index.html  known-limitations.md  llms.txt  manual.html  redaction-reference.md  release-checklist.md  roadmap.md  robots.txt  sitemap.xml  threat-model.md
docs/guides/: index.html  mcp-pii-redaction.html  python-llm-pii-redaction.html  pyveil-vs-presidio.html  style.css
docs/integrations/: anthropic.md  logging.md  mcp.md  ollama.md  openai-agents-vs-litellm.md  openai.md  tracing.md
docs/media/: social-preview.html
evaluation/: README.md  corpus.json  evaluate.py
examples/: anthropic.env.example  anthropic.example.yaml  anthropic.py  azure_openai.env.example  azure_openai.example.yaml  azure_openai.py  basic_usage.py  custom_rules.py  fastapi_middleware.py  litellm_proxy_filter.py  llm_client_boundary.py  log_filter.py  mcp_server_wrapper.py  mcp_tool_result.py  memory_write.py  ollama.env.example  ollama.example.yaml  ollama.py  openai.env.example  openai.example.yaml  openai.py  openai_agents_guardrail.py  redact_json.py
local.data/worklog/: 2026-06-27-opus-round2-polish-feedback.md
pyveil/: __init__.py  __main__.py  cli.py  constants.py  core.py  detectors.py  exceptions.py  findings.py  levels.py  masker.py  masking.py  patterns.py  placeholders.py  policy.py  rules.py  utils.py
pyveil/integrations/: __init__.py  _provider.py  anthropic.py  azure_openai.py  logging.py  mcp.py  ollama.py  openai.py
scripts/: compat_harness.py  compatibility_receipt.py  validate_compatibility.py  verify_zero_dependencies.py
tests/: __init__.py  test_anthropic_example.py  test_azure_openai_example.py  test_cli.py  test_compatibility_surfaces.py  test_compatibility_tooling.py  test_custom_rules.py  test_integration_examples.py  test_masker.py  test_ollama_example.py  test_openai_example.py  test_patterns.py  test_provider_contracts.py  test_utils.py  test_zero_dependencies.py
