[build-system]
requires = ["setuptools>=61.0,<77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyveil"
version = "0.2.2"
description = "Local PII and secret redaction for Python LLM apps, AI agents, tool calls, and MCP"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Hyeon Sang Jeon", email = "wingnut0310@gmail.com"}
]
maintainers = [
    {name = "Hyeon Sang Jeon", email = "wingnut0310@gmail.com"}
]
keywords = [
    "agent-native",
    "agent-security",
    "agents",
    "ai-agents",
    "ai-security",
    "anthropic",
    "data-protection",
    "data-masking",
    "de-identification",
    "guardrails",
    "llm",
    "llm-privacy",
    "llm-security",
    "logs",
    "masking",
    "mcp",
    "mcp-security",
    "memory",
    "observability",
    "pii",
    "pii-redaction",
    "privacy",
    "prompts",
    "prompt-redaction",
    "redaction",
    "runtime-redaction",
    "openai",
    "anonymization",
    "security",
    "sensitive-data",
    "tool-calls",
    "traces"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
azure-openai = [
    "openai>=1.66.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0.0",
]
dev = [
    "build>=1.2.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "twine>=5.0.0",
    "mypy>=1.0.0",
    "openai>=1.66.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0.0",
    "types-PyYAML>=6.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0.0",
]

[project.urls]
Homepage = "https://hyeonsangjeon.github.io/pyveil/"
Documentation = "https://hyeonsangjeon.github.io/pyveil/manual.html"
Repository = "https://github.com/hyeonsangjeon/pyveil"
Issues = "https://github.com/hyeonsangjeon/pyveil/issues"
Changelog = "https://github.com/hyeonsangjeon/pyveil/releases"
Security = "https://github.com/hyeonsangjeon/pyveil/security/policy"
Guides = "https://hyeonsangjeon.github.io/pyveil/guides/"
Evaluation = "https://hyeonsangjeon.github.io/pyveil/evaluation.html"
Funding = "https://github.com/sponsors/hyeonsangjeon"
Support = "https://github.com/hyeonsangjeon/pyveil/discussions"

[project.scripts]
pyveil = "pyveil.cli:main"

[tool.setuptools]
packages = ["pyveil", "pyveil.integrations"]

[tool.setuptools.package-data]
pyveil = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=pyveil",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
strict_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.coverage.run]
source = ["pyveil"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
